@@ -31,6 +31,7 @@ UT_FUNC(MimeTypeTest, "Test MimeType")
 	UT_VERIFY( mt.type() == "application/x-awk" );
 	UT_VERIFY( mt.comment() == "AWK script" );
 	UT_VERIFY( mt.icon_name() == "application-x-awk" );
+	UT_VERIFY( mt.subclass_of("application/x-executable") );
 
 	// duplicate, should not run tokenizer
 	UT_VERIFY( mt.icon_name() == "application-x-awk" );
